--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bootstrap": "^5.3.3",
         "jquery": "^3.7.1",
         "nprogress": "^0.2.0",
+        "v-calendar": "^3.1.2",
         "vue": "^3.5.13",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.5.0"
